1999-05-02  Tanaka Akira  <akr@jaist.ac.jp>

	* mime-view.el (unpack): New macro.
	(unpack-skip): New function.
	(unpack-fixed): New function.
	(unpack-byte): New function.
	(unpack-short): New function.
	(unpack-long): New function.
	(unpack-string): New function.
	(unpack-string-sjis): New function.
	(postpet-decode): New function.
	(mime-display-application/x-postpet): Use `postpet-decode'.

1999-05-02  Tanaka Akira  <akr@jaist.ac.jp>

	* (mime-edit-use-long-mime-charset-comment): Use `defvar' to define.

	* mime-edit.el (mime-edit-define-charset): Check
	`mime-edit-use-long-mime-charset-comment'.

1999-04-30 Shigeru OKUMURA <sokumura@jaist.ac.jp>
	
	* mime-edit.el (mime-edit-use-long-mime-charset-comment):
	new variable for switch long comment mime-charset-comment

1999-04-29  Shigeru OKUMURA <sokumura@jaist.ac.jp>

	* mime-view.el (mime-dsiplay-application/x-postpet):
	more adding pet's data. i.e. health ,treasure and happiness
		
1999-04-08  Shigeru OKUMURA <sokumura@jaist.ac.jp>

	* mime-view.el (mime-displya-application/x-postpet):
	Adding pet's birth day and mail sent date
	
1999-04-07  Tanaka Akira  <akr@jaist.ac.jp>

	* mime-view.el (mime-display-application/x-postpet): New function.
	(mime-preview-condition): Set up for
	'mime-preview-application/x-postpet.

1999-03-05  Tanaka Akira  <akr@jaist.ac.jp>

	* mime-edit.el (mime-edit-normalize-body): Call `enriched-encode' with
	three arguments.

1999-02-18  Tanaka Akira  <akr@jaist.ac.jp>

	* Sync up with semi-1_13_2.

	* semi-def.el (mime-user-interface-product): Bump up to
	AKEMI 1.13.1.

1999-02-17  Tanaka Akira  <akr@jaist.ac.jp>

	* mime-edit.el (mime-edit-define-charset): Check `mime-charset-comment'
	property for mime-charset to add comment.

1999-01-18  Tanaka Akira  <akr@jaist.ac.jp>

	* mime-view.el (mime-display-text/x-vcard): Deal with bare LF as newline.

1999-01-17  Tanaka Akira  <akr@jaist.ac.jp>

	* mime-play.el, ChangeLog: